[gd_scene load_steps=6 format=3 uid="uid://cw3cl300psm34"]

[ext_resource type="Texture2D" uid="uid://c0c66yt6h7i8b" path="res://Assets/GUI/backgroundbar.png" id="1_m2gel"]
[ext_resource type="Script" path="res://Scripts/GUI.gd" id="1_p6c4x"]
[ext_resource type="Texture2D" uid="uid://bmg58arf6l34a" path="res://Assets/GUI/background_fullbar.png" id="1_ugbjv"]
[ext_resource type="Texture2D" uid="uid://b6tcu0s3til1x" path="res://Assets/GUI/lifebar.png" id="2_3gwvc"]
[ext_resource type="Texture2D" uid="uid://c275tuubyuc5i" path="res://Assets/GUI/staminabar.png" id="3_pg56s"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p6c4x")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1143.0
offset_bottom = 140.0
scale = Vector2(0.3, 0.4)
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LifeBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LifeBarProgress" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/LifeBar"]
layout_mode = 2
max_value = 20.0
value = 20.0
texture_under = ExtResource("1_ugbjv")
texture_over = ExtResource("1_m2gel")
texture_progress = ExtResource("2_3gwvc")
texture_progress_offset = Vector2(8, 5)

[node name="StaminaBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StaminaBarProgress" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/StaminaBar"]
layout_mode = 2
max_value = 20.0
value = 20.0
texture_under = ExtResource("1_ugbjv")
texture_over = ExtResource("1_m2gel")
texture_progress = ExtResource("3_pg56s")
texture_progress_offset = Vector2(8, 5)
